@@ -1,4 +1,4 @@
 DIST install.ml 3764 RMD160 0763f3e975d4de2b894734c3b43f42d578285f7f SHA1 535c968aa3d150881b2c230d18645c25dbfa9980 SHA256 59bfe448e9a65427954100d57593085acaef7f4a222544f81651b442fe3318f8
-EBUILD mtasc-1.12.ebuild 1193 RMD160 2f725c4bb6ab07fb88750f16d87c0326d422d78b SHA1 b7475911f0df8c8afa27e86cc0c5b00d0b7f5cf8 SHA256 09e787e436d791825bbf2d2832ec28083e5c466f8370785699a4afd3f5265b5d
-MISC ChangeLog 396 RMD160 9f0807c52578c99d5099888805cf9cf761a43f41 SHA1 88b8542122d62dba42967a1a07aed62dbca75897 SHA256 1b290ed5d1e324a3927ccf300d7caff1c3df5c9d44fd38683b72177f614aa1c4
+EBUILD mtasc-1.12.ebuild 1237 RMD160 2ac4a05b7dbd0b3fd4f3f6d7b819a78588c00d3b SHA1 e681a8d08fcd1dd31a89456f5e458346b2227e37 SHA256 72e21befd92ef34ed751d389f9909df4d54bb7f71ca89d378f5f75495c22aac1
+MISC ChangeLog 542 RMD160 2717910e4a7708f8199a8402c182e9653c80a41a SHA1 d2978366a28eac16f9dd6eccb410fff2b0d9f473 SHA256 645eeee46c47e189f30ecb0d60e3476fc16b0a6175f339bc44a460516973e13b
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
