@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mtasc
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  mtasc-1.12.ebuild:
+  Add suggested RDEPEND=${DEPEND}, add die statements, use ${PN}
 
   16 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   mtasc-1.12.ebuild:
